@@ -25,6 +25,7 @@ Major Changes:
 
 Minor Changes:
  * align() can now do full justification. Suggested by Trinsec@M*U*S*H [GM]
+ * Wrapping fixes in align(). Reported by Trinsec@M*U*S*H [GM]
  * Guests will no longer see "Guests can't do that" if @mail is restricted
    to noguest. [GM]
  * Helpfile cleanup. [MG]
